tests/ui/foreign_match.stderr
Error [E0016]: Lex does not use `match`
  --> tests/ui/foreign_match.lex:3:5
    |
  3 |     match x {
    |     ^^^^^
 Why: choosing one branch from many is written with `switch`
 Fix: replace `match` with `switch`
